Dark mode gap fix

--- a/styles-src.css
+++ b/styles-src.css
@@ -46,7 +46,7 @@ body {
 @media only screen and (prefers-color-scheme: dark) {
     body {
       background: #426a74;
-      background-image: linear-gradient(to bottom right, #122938, #83b3a6);
+      background: linear-gradient(to bottom right, #122938, #83b3a6) no-repeat fixed;
     }
 }
 
